# sellpy-dockerfiles

.github/workflows/: build_cups_docker.yml
algup-java-base/: Dockerfile  install.sh  package.json
app-search/: Dockerfile  app-search.yml
circle-ci-base/: Dockerfile  README.md
circle-ci-node-aws/: Dockerfile  README.md
circle-ci-node-aws/python/: Dockerfile
circle-ci-python/: Dockerfile
circle-ci-sellphone/: Dockerfile
cudakeras/: Dockerfile  install.sh  requirements.txt
cups/: Dockerfile  cupsd.conf  install.sh
haskell-stack/: Dockerfile  install.sh  sellpy.cabal
haskell-stack-api/: Dockerfile  sellpy.cabal
haskell-stack-java/: Dockerfile  install.sh
nginx-photorobot/: Dockerfile  nginx.conf  nginx_conf.sh
node-parsoku-java/: Dockerfile  package.json
node-webapp-build/: package.json
printserver/: Dockerfile
python3-gphoto2/: .gitignore  Dockerfile  README.md  install.sh  photo.py  requirements.txt  run.sh
python3-jupyter-sklearn/: Dockerfile  docker-compose.yml  install.sh  install2.sh  matplotlibrc  requirements.txt  requirements2.txt
python3-jupyter-sklearn-charting/: Dockerfile  requirements.txt
python3-jupyter-sklearn-java/: Dockerfile  install.sh
