name:                sellpy
version:             0.1.0.0
license:             BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:
     base
   , transformers, mtl
   , bytestring, text
   , lens, lens-aeson
   , containers, unordered-containers, hashable
   , warp
   , wai
   , http-types
   , aeson, aeson-pretty, scientific
  default-language:    Haskell2010
