name:                sellpy
version:             0.1.0.0
license:             BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:
     base
   , aeson
   , aeson-pretty
   , amazonka
   , amazonka-dynamodb
   , array
   , bson-lens
   , bytestring, text
   , containers
   , hashable
   , http-types
   , iso8601-time
   , lens
   , lens-aeson
   , mongoDB
   , regex-tdfa
   , scientific
   , servant
   , servant-server
   , transformers, mtl
   , unordered-containers
   , wai
   , warp
   , wreq
  default-language:    Haskell2010
